--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "server",
+  "name": "api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=api:* node ./bin/www"
+    "start": "DEBUG=api:* nodemon --inspect ./bin/www"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
     "express": "~4.16.1",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lokijs": "^1.5.6",
     "morgan": "~1.9.1",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.17.0",
+    "pretty-quick": "^1.10.0",
     "uuid": "^3.3.2"
   }
 }
