--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=production node ./bin/www",
-    "debug": "NODE_ENV=development DEBUG=api:* nodemon --inspect=0.0.0.0:9229 ./bin/www"
+    "debug": "NODE_ENV=development DEBUG=api:* nodemon --inspect=0.0.0.0:9229 ./bin/www",
+    "debug-all": "NODE_ENV=development DEBUG=* nodemon --inspect=0.0.0.0:9229 ./bin/www",
+    "debug-api": "NODE_ENV=development DEBUG=api:* nodemon --inspect=0.0.0.0:9229 ./bin/www"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
@@ -24,6 +26,7 @@
     "nodemon": "^1.19.1",
     "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0",
+    "socket.io": "^2.3.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   }
