--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /api
 # copy package.json into the container at /api
 COPY package*.json /api/
 # install dependencies
-RUN npm install
+RUN yarn install
 # Copy the current directory contents into the container at /api
 COPY . /api/
 # Make port 80 available to the world outside this container
