--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /client
 # copy package.json into the container at /client
 COPY package*.json /client/
 # install dependencies
-RUN npm install
+RUN yarn install
 # Copy the current directory contents into the container at /client
 COPY . /client/
 # Make port 3000 available to the world outside this container
